antialiasing fix on firefox

--- a/less/imports/fonts.less
+++ b/less/imports/fonts.less
@@ -69,9 +69,9 @@
         nav.on-projects .link,
         nav.on-projects .about,
         .projects .tags,
-        .projects .lead {
+        .project-details .lead {
             text-shadow: 0 0 1px @colorA;
-            -webkit-font-smoothing: subpixel-antialiased;
+            -webkit-font-smoothing: antialiased;
         }
 
         .project-details {
